packages/@winglang/wingc/src/jsify/snapshots/json_duplicate_key_is_detected.snap
---
source: packages/@winglang/wingc/src/jsify/tests.rs
---
## Errors
Duplicate key "a" in json object literal 3:6
